<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PurposeWindow</class>
 <widget class="QMainWindow" name="PurposeWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1290</width>
    <height>834</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <pointsize>12</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>Назначения</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QLabel" name="title_label">
    <property name="geometry">
     <rect>
      <x>540</x>
      <y>20</y>
      <width>200</width>
      <height>30</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>200</width>
      <height>30</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>200</width>
      <height>30</height>
     </size>
    </property>
    <property name="font">
     <font>
      <pointsize>14</pointsize>
      <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>Назначения</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignmentFlag::AlignCenter</set>
    </property>
   </widget>
   <widget class="QTableView" name="purpose_table">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>210</y>
      <width>1270</width>
      <height>510</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="sortingEnabled">
     <bool>true</bool>
    </property>
    <attribute name="horizontalHeaderDefaultSectionSize">
     <number>416</number>
    </attribute>
   </widget>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>70</y>
      <width>1271</width>
      <height>132</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="1">
      <widget class="QLabel" name="num_certificate_label">
       <property name="minimumSize">
        <size>
         <width>415</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>415</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Номер удостоверения</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="num_certificate_edit">
       <property name="minimumSize">
        <size>
         <width>415</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>415</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="num_flight_label">
       <property name="minimumSize">
        <size>
         <width>415</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>415</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Номер авиарейса</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLineEdit" name="num_flight_edit">
       <property name="minimumSize">
        <size>
         <width>415</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>415</width>
         <height>30</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
     <item row="0" column="2">
      <widget class="QLabel" name="nomination_label">
       <property name="minimumSize">
        <size>
         <width>415</width>
         <height>90</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>415</width>
         <height>90</height>
        </size>
       </property>
       <property name="text">
        <string>Назначение</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
     </item>
     <item row="1" column="2">
      <widget class="QComboBox" name="nomination_box">
       <item>
        <property name="text">
         <string>Первый пилот</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Второй пилот</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Старший бортпроводник</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Младший бортпроводник</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Бортовой инженер</string>
        </property>
       </item>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>730</y>
      <width>1271</width>
      <height>32</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QPushButton" name="add_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Добавить</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="delete_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Удалить</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="change_button">
       <property name="minimumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>30</height>
        </size>
       </property>
       <property name="text">
        <string>Изменить</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1290</width>
     <height>33</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
